star_ecommerce/web-tinhocngoisao/wp-content/themes/online-shop-child/private/scss/_page.scss
body {
    background: $body_background;
}

header#masthead {
    background: $header_background;
}

.header-wrapper {
    padding: 0;
}

.top-header-wrapper {
    .icon-box.hide-mobile {
        display: none;
        @media screen and(min-width: 992px){
            display: inline-block;
        }
    }
}
.hide-mobile {
    display: none;
    @media screen and(min-width: 992px){
        display: block;
    }
}

.hide-scroll-body {
    overflow: hidden;
}

// custom woocommerce product galery
.woocommerce-product-gallery {
    .flex-control-nav{
        display: flex;
        li {
            margin-right: 3px !important;
        }
    }
}

// custom right sidebar content
.woocommerce-page {
    #content {
        .single-cart-page {
            @media screen and(min-width: 1024px) {
                width: 70%;
            }
        }
    }
}

.fixed-header-scroll {
    position: fixed;
    width: 100%;
    top: -190px;
    z-index: 888;
    background-color: white;
    @media screen and(min-width: 1230px) {
        top: 0;
    }
}
.body-content-fixed {
    margin-top: 300px;
    @media screen and(min-width: 1230px) {
        margin-top: 480px;
    }
}

.widget_online_shop_about {
    .featured-entries-col.column {
        margin-left: 0;
        margin-right: 0;
    }
}

#content {
    .wrapper {
        .slider-feature-wrap {
            background: $content_background;
            @media screen and(min-width: 768px) {
                padding-top: 30px;
            }

            margin-top: 0;
            .featured-entries-about {
                padding-left: 10px;
            }
        }
    }

    // shop page
    #primary {
        form.woocommerce-ordering {
            span {
                line-height: 40px;
            }
            select {
                background-color: $content_background;
            }
        }
    }

    aside[id^='online_shop_posts_col'] {
        .featured-entries-col .post-container {
            height: 430px;
        }
    }
    aside[id^='online_shop_'] {
        .at-title-action-wrapper {
            border-bottom: none;
            position: relative;
            .pointer {
                float: left;
                h2 {
                    margin-left: 0;
                    margin-top: 0;
                    padding: 0;
                    font-size: 30px;
                    font-weight: 300;
                    color: $aside_header_color;
                    .wg-description {
                        font-size: 14px;
                        font-style: italic;
                        padding-left: 10px;
                        display: none;
                        @media screen and (min-width: 768px) {
                            display: inline;
                        }
                    }
                    // custom class icon
                    i {
                        margin-right: 5px;
                    }
                }
            }
            .at-action-wrapper {
                margin-top: 10px;
                display: none;
                @media screen  and (min-width: 768px){
                    display: block;    
                }
            }
            &:before {
                border: none;
            }
        }
        .featured-entries-col.column {
            padding-top: 0;
            margin-left: 0;
            margin-right: 0;
            background: $aside_list_product_background;
            
        }
        &.widget_online_shop_wc_products {
            .at-action-wrapper {
                i {
                    //display: none !important;
                    position: absolute;
                    top: 300px;
                    margin-left: 0;
                    margin-right: 0;
                    //border-radius: 50%;
                    z-index: 200;
                    border: 2px solid red;
                    background: red;
                    color: white;
                    font-weight: bold;
                    &.prev {
                        left: 0;
                    }
                    &.next {
                        right: 0;
                    }
                    &:hover {
                        background: red;
                        color: white;
                        font-weight: bold;
                    }
                }
            }
            // &:hover {
            //     .at-action-wrapper {
            //         i {
            //             display: block!important;
            //         }
            //     }
            // }
        }
    }
    .slider-feature-wrap {
        aside[id^='online_shop_'] {
            padding: 0;
            margin: 0;
        }
    }
}

.onsale-price {
    float: right;
    position: absolute;
    right: 10px;
    top: 10px;
    width: 35px;
    height: 35px;
    border-radius: 50%;
    line-height: 35px;
    background: red;
    color: white;
    text-align: center;
    z-index: 100;
    font-size: 11px;
}

.dv-custom-marquee {
    display: flex;
    border: 1px solid rgba(255,0,0,0.4);
    background: rgba(255,0,0,0.4);
    border-radius: 20px;
    span.warning {
        margin: 10px;
        background: #d42333;
        height: 9px;
        width: 9px;
        display: inline-block;
        border-radius: 50%;
        box-shadow: 0 0 0 0 #d42333;
        cursor: pointer;
        -webkit-animation: pulse 1.2s infinite cubic-bezier(0.66,0,0,0.5);
        -moz-animation: pulse 1.2s infinite cubic-bezier(0.66,0,0,0.5);
        -ms-animation: pulse 1.2s infinite cubic-bezier(0.66,0,0,0.5);
        animation: pulse 1.2s infinite cubic-bezier(0.66,0,0,0.5);
    }
    marquee {
        padding: 3px 3px 3px 0;
        font-weight: bold;
        a {
            color: #333;
            margin-right: 15px;
            &:hover {
                color: red;
            }
        }
    }
}

@-webkit-keyframes pulse{
    to{box-shadow:0 0 0 12px rgba(232,76,61,0)}
}
@-moz-keyframes pulse{
    to{box-shadow:0 0 0 12px rgba(232,76,61,0)}
}
@-ms-keyframes pulse{
    to{box-shadow:0 0 0 12px rgba(232,76,61,0)}
}
@keyframes pulse{
    to{box-shadow:0 0 0 12px rgba(232,76,61,0)}
}

